# auto-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/: AGENTS.md
.github/workflows/: ci.yml
docs/: yaml_protocol_v0.1.md
examples/: decode_sweep.yaml  prefill_sweep.yaml
src/auto_bench/: __main__.py  cli.py  collector.py  errors.py  expressions.py  manifest.py  renderer.py  resolver.py  runner.py  templates.py
tests/: test_cli.py  test_collector.py  test_renderer.py  test_resolver.py
