[project]
name = "auto-bench"
version = "0.1.6"
description = "Automated TensorRT-LLM benchmark experiment orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "auto-bench contributors" }]
keywords = ["benchmark", "tensorrt-llm", "llm", "gpu", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "ruamel-yaml>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/Xianyu39/auto-bench"
Repository = "https://github.com/Xianyu39/auto-bench"
Issues = "https://github.com/Xianyu39/auto-bench/issues"
Documentation = "https://github.com/Xianyu39/auto-bench#readme"

[project.scripts]
auto-bench = "auto_bench.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["auto_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
